# SmartDoc_AI

./: DEVELOPMENT_GUIDE.md  README.md  deploy-all.sh  docker-compose.yml
backend/: .env.example  Dockerfile  deploy-local.sh  main.py  pyproject.toml  smartdoc-ai.service
backend/app/agent/: graph.py  state.py  tools.py
backend/app/api/: qa.py  upload.py
backend/app/core/: auth.py  config.py  langsmith.py
backend/app/db/: redis_client.py  supabase_client.py
backend/app/services/: document_service.py  qa_service.py  session_service.py
frontend/: deploy-local.sh  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  FileUpload.tsx  MessageList.tsx
frontend/src/hooks/: useChat.ts
