[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "python-multipart>=0.0.22",
    "supabase>=2.28.0",
    "uvicorn>=0.41.0",
]
